--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="./Journée MIT 2019_files/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link rel="stylesheet" href="./Journée MIT 2019_files/hotweb.css">
   <link rel="stylesheet" href="./Journée MIT 2019_files/font-awesome.min.css">
-  <link rel="canonical" href="https://tonoisyone.github.io/stfoc2/">
+  <link rel="canonical" href="https://https://stfoc.github.io/Stfoc/">
 
   
   <script async="" src="./Journée MIT 2019_files/analytics.js.téléchargement"></script><script>
@@ -149,7 +149,7 @@
                                 
                                     
                                         <li class="nav-item active">
-                                            <a class="nav-link m-1" href="https://tonoisyone.github.io/stfoc2/">
+                                            <a class="nav-link m-1" href="https://stfoc.github.io/Stfoc/">
                                                 <strong>Accueil</strong>
                                                 <span class="sr-only">(current)</span>
                                             </a>
