--- a/venue.html
+++ b/venue.html
@@ -220,7 +220,7 @@
 <div class="container">
     <div class="mt-xs-0 mt-sm-0 mt-md-1 mt-lg-2 mt-xl-3 mb-xs-2 mb-sm-2">
             <p>
-                La journée STFOC se tiendra le Mercredi 20 Novembre 2019 
+                La journée STFOC se tiendra le Vendredi 8 Novembre 2019 
                 au <strong>bâtiment Blaise Pascale (Génie Informatique)</strong>.</p>
 
             <p>
