--- a/venue.html
+++ b/venue.html
@@ -150,7 +150,7 @@
                                 
                                     
                                         <li class="nav-item">
-                                            <a class="nav-link m-1" href="https://tonoisyone.github.io/stfoc2/">
+                                            <a class="nav-link m-1" href="https://stfoc.github.io/Stfoc/">
                                                 <strong>Accueil</strong>
                                             </a>
                                         </li>   
