--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                                 Bienvenue à la <strong>journée sécurité et tolérance aux fautes pour les objets communicants distribués (STFOC 2019)</strong>
                         </p>
                         <p> 
-                                Cette journée .....................
+                                L’internet des objets (IdO), pourrait bientôt occuper une place comparable à celle de l’électricité dans le quotidien des citoyens, et jouera ainsi un rôle fondamental dans le développement socio-économique. Dans cette nouvelle ère d'Internet, les réseaux peuvent être composés de quelques milliers voir de millions d'objets, constituant ainsi un réseau dense.  Les objets communicants dans l’IdO sont hétérogènes en termes de puissance de calcul, de capacité de stockage et de capacité énergétique. Ils sont généralement déployés dans des environnements ouverts et s'exposent à des attaques malveillantes et/ou des pannes suite à l'épuisement des batteries. Par conséquent, la mise en œuvre des protocoles sécurisés et tolérants aux fautes pour des millions d’objets connectés constitue un défi majeur. L’objectif de cette journée scientifique est de présenter quelques contributions dans ces thème et  de parler en détail sur les défis théoriques et pratiques dans l'IoT. 
                         </p>
                         Financé par le projet STFOC
                          <p>
