--- a/registration.html
+++ b/registration.html
@@ -151,7 +151,7 @@
                                 
                                     
                                         <li class="nav-item">
-                                            <a class="nav-link m-1" href="https://tonoisyone.github.io/stfoc2/">
+                                            <a class="nav-link m-1" href="https://https://stfoc.github.io/Stfoc/">
                                                 <strong>Accueil</strong>
                                             </a>
                                         </li>   
