--- a/organization.html
+++ b/organization.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="organization_fichiers/bootstrap.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   <link rel="stylesheet" href="organization_fichiers/hotweb.css">
   <link rel="stylesheet" href="organization_fichiers/font-awesome.css">
-  <link rel="canonical" href="https://fridayseminarlmac.github.io/organization.html">
+  <link rel="canonical" href="https://https://stfoc.github.io/Stfoc/organization.html">
 
   
   <script async="" src="organization_fichiers/analytics.js"></script><script>
