--- a/program.html
+++ b/program.html
@@ -265,7 +265,7 @@
                                     </td>
                                     <td>
                                         <p>
-                                        <b><i>Hicham Lakhlef, Abdelmadjid Bouabdallah, Yacine challal, François Ta¨ıani</i></b> 
+                                        <b><i>Hicham Lakhlef, Abdelmadjid Bouabdallah, Yacine challal, François Taiani</i></b> 
                                         <br>Heudiasyc<br>
                                         
                                            <!-- <a href="https://fridayseminarlmac.github.io/BOUM-UTC/assets/abstracts/abstract_MIT_Youcef.pdf" target="_blank">Abstract</a>
