--- a/organization.html
+++ b/organization.html
@@ -237,7 +237,7 @@
         </div>
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">                
-            <p> </p><center><img src="organization_fichiers/logoLMAC.jpg" alt="LogoLMAC" class="center"></center> <p></p>
+            <p> </p><center><img src="organization_fichiers/spip.png" alt="LogoHds" class="center"></center> <p></p>
                 
              <!-- ######### webmaster ##########
              <div class="card">
