--- a/program.html
+++ b/program.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Journée MIT 2019</title>
+  <title>Journée Stfoc 2019</title>
   <meta name="description" content="En cours de rédaction par Tarik">
 
   <link rel="stylesheet" href="program_fichiers/bootstrap.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
