--- a/organization.html
+++ b/organization.html
@@ -238,7 +238,7 @@
 
         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">                
             <p> </p><center><img src="organization_fichiers/spip.png" alt="LogoHds" class="center"></center> <p></p>
-                
+            <p> </p><center><img src="organization_fichiers/Logo-CNRS-INS2I.jpg" alt="LogoHds" class="center"></center> <p></p>    
              <!-- ######### webmaster ##########
              <div class="card">
                 <div class="card-header text-white bg-inverse"><strong>Webmaster</strong></div>
