--- a/program.html
+++ b/program.html
@@ -506,7 +506,7 @@
                                         <!-- <th class="bg-primary"> -->
                                         <th class="bg-success">
                                                 <!-- <h5>Title Presentation 7</h5> -->
-                                                XXXXXXX
+                                                Contrôle et gestion des réseaux avec leurs objets connectés
                                                 
                                                 
                                         </th>
