--- a/program.html
+++ b/program.html
@@ -319,7 +319,7 @@
                                             <div>10:30-11:00</div>
                                     </th>
                                     <th class="bg-success">
-                                                <p> XXXX </p>
+                                                <p> IoT data compression and edge machine learning for stress detection </p>
                                         </th>
                                     
                                 </tr>
